add app.message